[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/ui/commons/load/load_save_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/ui/commons/save/save_game.gd" type="Script" id=2]
[ext_resource path="res://game/ui/commons/fonts/caslonantique.tres" type="DynamicFont" id=3]

[node name="save_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 130.0
margin_top = 329.0
margin_right = 304.0
margin_bottom = 383.0
custom_fonts/font = ExtResource( 3 )
text = "OPTIONS_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slots" type="VBoxContainer" parent="."]
anchor_left = 0.274
anchor_top = 0.368
anchor_right = 0.709
anchor_bottom = 0.881
margin_left = 0.280029
margin_top = -0.200012
margin_right = -0.52002
margin_bottom = 46.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autosave_slot" parent="slots" instance=ExtResource( 1 )]
margin_right = 556.0
margin_bottom = 100.0

[node name="slot1" parent="slots" instance=ExtResource( 1 )]
margin_top = 104.0
margin_right = 556.0
margin_bottom = 204.0

[node name="slot2" parent="slots" instance=ExtResource( 1 )]
margin_top = 208.0
margin_right = 556.0
margin_bottom = 308.0

[node name="slot3" parent="slots" instance=ExtResource( 1 )]
margin_top = 312.0
margin_right = 556.0
margin_bottom = 412.0

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="slots/slot1" to="." method="_on_slot_pressed" binds= [ 0 ]]
[connection signal="pressed" from="slots/slot2" to="." method="_on_slot_pressed" binds= [ 1 ]]
[connection signal="pressed" from="slots/slot3" to="." method="_on_slot_pressed" binds= [ 2 ]]
